updated some code in index.html

--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
                             <span>JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://github.com/masud-79/masud-79.github.io" target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://masud-79.github.io/" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         </div>
                     </div>
                 </div>
@@ -405,15 +405,15 @@
                     </div>
                     <div class="project-info">
                         <h3>Quiz App</h3>
-                        <p>This is a simple quiz app that I created using html, css and javascript.</p>
+                        <p>This is a simple and interactive quiz app that I created using html, css and javascript.</p>
                         <div class="project-tags">
                             <span>HTML</span>
                             <span>CSS</span>
                             <span>JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://github.com/masud-79/quiz-app" target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://masud-79.github.io/quiz-app/" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         </div>
                     </div>
                 </div>
@@ -430,7 +430,7 @@
                             <span>MongoDB</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://github.com/masud-79/Ecommerce-website" target="_blank"><i class="fab fa-github"></i> Code</a>
                             <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         </div>
                     </div>
